--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -19,7 +19,7 @@ author1:
 
   # This photo will be used in the about section
   picture:
-    path: https://placehold.it/128x128
+    path: /assets/img/author-avatar.jpg
     # srcset is optional, but can be used to provide higher res versions for retina displays
     srcset:
       1x: https://placehold.it/128x128
@@ -29,11 +29,10 @@ author1:
   # Comment/uncommet to show/hide
   # Rearrange to change the order in which they appear
   social:
-    twitter: <username>
-    github: <username>
-    # email:           <mail@domain.tld>
+    github: hovinh
+    email:           hxvinh@comp.nus.edu.sg
     # rss:             https://<url>/feed.xml
-    # facebook:        <username>
+    facebook:        vinh.hoxuan.9
     # google:          <number>
     # vk:              <username>
     # youtube:         <string_string_string>
@@ -60,7 +59,7 @@ author1:
     # npm:             <username>
     # hackernews:      <username>
     # trello:          <firstnamelastname>
-    # linkedin:        <firstname-lastname-string>
+    linkedin:        vinh-xuan-ho-25791a71
     # xing:            <firstname_lastname_counter>
     # blogger:         <number>
     # delicious:       <username>
@@ -68,20 +67,3 @@ author1:
     # paypal:          <username>
     # download:        <url>
 
-# Another author (optional)
-author2:
-  name: <firtname> <lastname>
-  email: <mail@domain.tld>
-  about: |
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-
-    Open `_data/authors.yml` to edit this text.
-  picture: https://placehold.it/128x128
-  twitter: <username>
-  github: <username>
-  accent_color: "#268bd2"
-  accent_image:
-    background: "#202020"
-    overlay: false
