--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ keywords: [machine learning, NLP]
 # A (square) logo for your site.
 # If provided, it will be shown at the top of the sidebar.
 # It also used by the `jekyll-seo-tag` plugin.
-#logo: /assets/icons/icon.png
+# logo: /assets/icons/icon.png
 
 # This should be the same author as first entry in `_data/authors.yml`.
 author:
@@ -87,25 +87,35 @@ font: Noto Sans, Helvetica, Arial, sans-serif
 # To change font-weight, see _sass/variables.scss
 font_heading: Roboto Slab, Helvetica, Arial, sans-serif
 
-defaults:
+defaults:  
   - scope:
-      path: 404.md
+      path: about.md
     values:
       menu: true
       order: 1
-      
+  
   - scope:
-      path: 404.md
+      path: news.md
     values:
       menu: true
       order: 2
-  
       
   - scope:
-      path: hyde
+      path: projects.md
     values:
-      accent_color: rgb(79,177,186)
-      accent_image: /assets/img/sidebar-bg-vinh.jpg
+      menu: true
+      order: 3
+  
+  - scope:
+      path: blog.md
+    values:
+      menu: true
+      order: 4
+  #- scope:
+  #    path: hyde
+  #  values:
+  #    accent_color: rgb(79,177,186)
+  #    accent_image: /assets/img/sidebar-bg-vinh.jpg
 
   # `jekyll-seo-tag` will mark collection outputs as `BlogPosting`,
   # but we want them to be `WebPage`s:
@@ -114,16 +124,19 @@ defaults:
     values:
       seo:
         type: WebPage
+      comments: true
   - scope:
       type: featured_categories
     values:
       seo:
         type: WebPage
+      comments: true
   - scope:
       type: featured_tags
     values:
       seo:
         type: WebPage
+      comments: true
 
 # 3rd Party Integrations
 # ----------------------------------------------------------------------------------------
@@ -260,7 +273,7 @@ plugins:
   - jekyll-seo-tag
   - jekyll-sitemap
   - jekyll-titles-from-headings
-
+  - jekyll-avatar
 # Theme
 # ---------------------------------------------------------------------------------------
 
