--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -33,6 +33,7 @@ author1:
     github: hovinh
     email:           hxvinh@comp.nus.edu.sg
     # rss:             https://<url>/feed.xml
+    linkedin:        vinh-xuan-ho-25791a71
     facebook:        vinh.hoxuan.9
     # google:          <number>
     # vk:              <username>
@@ -60,11 +61,11 @@ author1:
     # npm:             <username>
     # hackernews:      <username>
     # trello:          <firstnamelastname>
-    linkedin:        vinh-xuan-ho-25791a71
     # xing:            <firstname_lastname_counter>
     # blogger:         <number>
     # delicious:       <username>
     # stumbleupon:     <username>
     # paypal:          <username>
-    # download:        <url>
+    download:       https://drive.google.com/file/d/1CAAeJoxBaimKI7sVGqFM6AyH1WAon8Fs/view
+
 
