--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ description:           >
   "computer science, imagination, idea"
   
 # A shorter description for the sidebar.
-tagline:               '"computer science, imagination, idea"'
+tagline:               '"deep learning, neural network, natural language processing"'
 
 # A list of keywords for your blog
 keywords: [machine learning, NLP]
