--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -8,14 +8,11 @@ author1:
   # Used at the bottom of each page and at the top of the `about` layout
   # Markdown enabled, can use multiple paragraphs (enabled by `|`)
   about: |
-     I got my Bachelor of Science in Information Technology 
-     in Ho Chi Minh University of Science, Vietnam. 
-     Currently, I am a Master student at the School of Computing, 
-     National University of Singapore. 
-     My major is Computer Science, with research interests 
-     in Machine Learning, Natural Language Processing, Game Theory, 
+     I am a Data Scientist at Smart Manufacturing & AI team, Micron Technology, Singapore. 
+     My research interests are unbounded, but I'm particularly interested in 
+     Machine Learning, Natural Language Processing, Game Theory, 
      and Bioinformatics. You can find my CV 
-     <a href="https://drive.google.com/file/d/1CAAeJoxBaimKI7sVGqFM6AyH1WAon8Fs/view">here</a>.
+     <a href="https://drive.google.com/open?id=1JrJLy5GnOLpsR_v36odNXDg66qqGjozi">here</a>.
 
   # This photo will be used in the about section
   picture:
@@ -66,6 +63,6 @@ author1:
     # delicious:       <username>
     # stumbleupon:     <username>
     # paypal:          <username>
-    download:       https://drive.google.com/file/d/1CAAeJoxBaimKI7sVGqFM6AyH1WAon8Fs/view
+    download:       https://drive.google.com/open?id=1JrJLy5GnOLpsR_v36odNXDg66qqGjozi
 
 
