--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -12,7 +12,7 @@ author1:
      My research interests are unbounded, but I'm particularly interested in 
      Machine Learning, Natural Language Processing, Game Theory, 
      and Bioinformatics. You can find my CV 
-     <a href="https://drive.google.com/open?id=1JrJLy5GnOLpsR_v36odNXDg66qqGjozi">here</a>.
+     <a href="https://drive.google.com/file/d/1YH2Cw4ev3e-tS6QS-k6jMG2aUzlVDo6Z/view?usp=sharing">here</a>.
 
   # This photo will be used in the about section
   picture:
@@ -63,6 +63,6 @@ author1:
     # delicious:       <username>
     # stumbleupon:     <username>
     # paypal:          <username>
-    download:       https://drive.google.com/open?id=1JrJLy5GnOLpsR_v36odNXDg66qqGjozi
+    download:       https://drive.google.com/file/d/1YH2Cw4ev3e-tS6QS-k6jMG2aUzlVDo6Z/view?usp=sharing
 
 
