add: new blog post for codenames cheat engine

--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ keywords: [machine learning, NLP]
 # This should be the same author as first entry in `_data/authors.yml`.
 author:
   name: Xuan Vinh Ho
-  email: hxvinh@comp.nus.edu.sg
+  email: hxvinh.hcmus@gmail.com
   # Used by `jekyll-seo-tag`:
   # twitter:             <username>
 
