--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -3,16 +3,16 @@
 # Change `author1` to your shortname.
 author1:
   name: Xuan Vinh Ho
-  email: hxvinh@comp.nus.edu.sg
+  email: hxvinh.hcmus@gmail.com
 
   # Used at the bottom of each page and at the top of the `about` layout
   # Markdown enabled, can use multiple paragraphs (enabled by `|`)
   about: |
-     I am a Data Scientist at Smart Manufacturing & AI team, Micron Technology, Singapore. 
+     I am a Data Scientist at Upskills, Singapore. 
      My research interests are unbounded, but I'm particularly interested in 
      Machine Learning, Natural Language Processing, Game Theory, 
      and Bioinformatics. You can find my CV 
-     <a href="https://drive.google.com/file/d/1YH2Cw4ev3e-tS6QS-k6jMG2aUzlVDo6Z/view?usp=sharing">here</a>.
+     <a href="https://drive.google.com/file/d/1Pt04q_vjjszlgBcRcr7_FLYJopip-lXV/view?usp=sharing">here</a>.
 
   # This photo will be used in the about section
   picture:
@@ -28,7 +28,7 @@ author1:
   # Rearrange to change the order in which they appear
   social:
     github: hovinh
-    email:           hxvinh@comp.nus.edu.sg
+    email:           hxvinh.hcmus@gmail.com
     # rss:             https://<url>/feed.xml
     linkedin:        vinh-xuan-ho-25791a71
     facebook:        vinh.hoxuan.9
@@ -63,6 +63,6 @@ author1:
     # delicious:       <username>
     # stumbleupon:     <username>
     # paypal:          <username>
-    download:       https://drive.google.com/file/d/1YH2Cw4ev3e-tS6QS-k6jMG2aUzlVDo6Z/view?usp=sharing
+    download:       https://drive.google.com/file/d/1Pt04q_vjjszlgBcRcr7_FLYJopip-lXV/view?usp=sharing
 
 
