--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -31,7 +31,7 @@ author1:
     email:           hxvinh.hcmus@gmail.com
     # rss:             https://<url>/feed.xml
     linkedin:        vinh-xuan-ho-25791a71
-    facebook:        vinh.hoxuan.9
+    # facebook:        vinh.hoxuan.9
     # google:          <number>
     # vk:              <username>
     # youtube:         <string_string_string>
@@ -62,7 +62,7 @@ author1:
     # blogger:         <number>
     # delicious:       <username>
     # stumbleupon:     <username>
-    # paypal:          <username>
+    paypal:          https://paypal.me/hoxuanvinh
     download:       https://drive.google.com/file/d/1Pt04q_vjjszlgBcRcr7_FLYJopip-lXV/view?usp=sharing
 
 
