--- a/_config.yml
+++ b/_config.yml
@@ -111,6 +111,12 @@ defaults:
     values:
       menu: true
       order: 4
+
+  - scope:
+      path: sharing_materials.md
+    values:
+      menu: true
+      order: 5
   #- scope:
   #    path: hyde
   #  values:
