--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -8,10 +8,12 @@ author1:
   # Used at the bottom of each page and at the top of the `about` layout
   # Markdown enabled, can use multiple paragraphs (enabled by `|`)
   about: |
-     I am a Data Scientist at Upskills, Singapore. 
-     My research interests are unbounded, but I'm particularly interested in 
-     Machine Learning, Natural Language Processing, Game Theory, 
-     and Bioinformatics. You can find my CV 
+     I am a Machine Learning Consultant at Upskills (Singapore). 
+     I strongly believe that data science is a highly transferable skillset that can be applied 
+     across different domains. At the same time, I also recognize the immense value of 
+     domain knowledge in solving complex problems. I'm enthusiastic about working on 
+     diverse projects that allow me to gain new perspectives and insights, and 
+     ultimately make a positive impact on society. You can find my CV 
      <a href="https://drive.google.com/file/d/1Pt04q_vjjszlgBcRcr7_FLYJopip-lXV/view?usp=sharing">here</a>.
 
   # This photo will be used in the about section
