add: job title and Design Pattern materials

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -8,7 +8,7 @@ author1:
   # Used at the bottom of each page and at the top of the `about` layout
   # Markdown enabled, can use multiple paragraphs (enabled by `|`)
   about: |
-     I am a Machine Learning Consultant at Upskills (Singapore). 
+     I am a Deputy Data Science Lead at PSA Singapore. 
      I strongly believe that data science is a highly transferable skillset that can be applied 
      across different domains. At the same time, I also recognize the immense value of 
      domain knowledge in solving complex problems. I'm enthusiastic about working on 
